--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,22 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+app.jwtExpirationMs = '86400000'
+app.jwtSecret = ======================BezKoder=Spring===========================
+app.bcrypt.salt = $2a$10$QkRidA35ea0Fzm/ObrOEgO
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=programari.spital.tudor@gmail.com
+spring.mail.password=ikbeumgjuyrudxph
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+springdoc.swagger-ui.path=/swagger
+spring.security.user.name=admin
+spring.security.user.password=admin
 
 
